<resources>
  <string name="app_name" translatable="false">Story</string>
  <string name="email_hint" translatable="false">Email</string>
  <string name="password_hint">Password</string>
  <string name="name_hint">Name</string>
  <string name="invalid_password">Password must be > 8 characters</string>
  <string name="invalid_email_message">Invalid Email address</string>

  <string name="action_log_in">Log in</string>
  <string name="action_register">Register</string>
  <string name="sign_up_failed">Register failed, try again later</string>
  <string name="sign_in_failed">Sign in failed, try again later</string>
  <string name="connection_failed">Failed connect to server</string>
  <string name="no_data">No data</string>
  <string name="upload_failed">Upload failed</string>
  <string name="upload_success">Upload success</string>
  <string name="upload_warning">Please add an Image before continue</string>
  <string name="user_not_found">Incorrect password or user not found</string>
  <string name="sign_in_warn">Please input a valid email and password</string>
  <string name="welcome_text">Welcome to story</string>
  <string name="welcome_text_2">Let the story begin</string>
  <string name="required_information">required information</string>
  <string name="account_information">account information</string>
  <string name="welcome_back">Welcome back</string>
  <string name="long_time_no_see">Long time no see!</string>
  <string name="add_new_story">add new story</string>
  <string name="camera_permission_denied">Camera permission has been denied</string>

  <string name="language_key">Language</string>
  <string name="action_logout">Log out</string>
  <string name="cancel">Cancel</string>
  <string name="action_close">Close</string>
  <string name="description">Add description....</string>
  <string name="content_desc_back">back</string>
  <string name="action_upload">Upload</string>
  <string name="gallery">gallery</string>
  <string name="open_camera">open camera</string>
  <string name="location">location</string>
  <string name="story_by_placeholder">Story by</string>
  <string name="open_fab_description" translatable="false">Open fab</string>
  <string name="showcase_mode_content_desc" translatable="false">showcase mode</string>
  <string name="story_image_content_description">story image</string>
</resources>